style.css
:root {
  --frame-color: hsl(220, 60%, 40%);
  --frame-highlight: hsl(220, 50%, 60%);
  --frame-shadow: hsl(220, 50%, 20%);
  --new-game: var(--frame-shadow);
  --tile--1-color: hsl(0, 100%, 50%);
  --tile--1-highlight: hsl(0, 100%, 70%);
  --tile--1-shadow: hsl(0, 100%, 30%);
  --tile--2-color: hsl(45, 100%, 50%);
  --tile--2-highlight: hsl(45, 100%, 70%);
  --tile--2-shadow: hsl(45, 100%, 30%);
  --border-thickness: 3px;
  --grid-size: 4;
}

@font-face {
  font-family: 'LibreClarendonWide-Medium';
  src: url("LibreClarendonWide-120Medium.otf") format("opentype");
  font-weight: 500;
}

html {
  height: 100%;
  width: 100%;
  position: fixed; /* disable rubberbanding on scroll */
  overflow: hidden;
}

body {
  background: hsl(220, 20%, 91%);
  background: linear-gradient(
    45deg,
    hsl(220, 20%, 91%) 0%,
    hsl(220, 20%, 61%) 100%
  );
  color: hsl(0, 0%, 1%);
  font-family: LibreClarendonWide-Medium, american typewriter, serif;
  font-size: var(--font-size);
  touch-action: none; /* disable zoom on touch devices */
  display: grid;
  place-items: center; /* vert/horiz center .container */
  height: 100%;
}

.grid-size {
  display:flex;
  justify-content: center;
  margin: 2vmin 0;
}

main {
  margin: 0 auto;
  width: 80vmin;
  height: 80vmin;
}

.heading {
  font-size: 5vmin;
  text-align: center;
  position: absolute;
  top: 50%;
  left: 0;
  z-index: 2;
  background: white;
  margin-top: -9vmin;
  width: 100%;
  padding: 2vmin;
  display: none;
}

.grid {
  display: grid;
  grid-template-columns: repeat(var(--grid-size), 1fr);
}

.frame {
  box-sizing: border-box;
  padding: 4vmin;
  background-color: var(--frame-color);
  border-radius: 1rem;
  border: 4px solid;
  border-top-color: var(--frame-highlight);
  border-right-color: var(--frame-shadow);
  border-bottom-color: var(--frame-shadow);
  border-left-color: var(--frame-highlight);
  box-shadow: 20px 20px 15px 5px hsla(0, 0%, 0%, 0.1);
  font-weight: 500;
}

.tile {
  -webkit-appearance: none;
  -moz-appearance: none;
  grid-area: var(--area);
  margin: 0;
  padding: 0;
  letter-spacing: -2px;
  text-indent: -2px;
  font-size: inherit;
  font-weight: inherit;
  border: 0;
  z-index: 1;
  cursor: pointer;
}

.tile--empty {
  cursor: auto;
}

.tile[disabled] {
  cursor: not-allowed;
  color: inherit;
}

.tile-background {
  background-color: var(--frame-color) !important;
  box-shadow: inset 0 0 20px 4px var(--frame-shadow);
  z-index: 0;
  grid-area: var(--area, auto);
}

.tile--color1 {
  background-color: var(--tile--1-color);
  border: var(--border-thickness) solid;
  border-top-color: var(--tile--1-highlight);
  border-right-color: var(--tile--1-shadow);
  border-bottom-color: var(--tile--1-shadow);
  border-left-color: var(--tile--1-highlight);
}

.tile--color2 {
  background-color: var(--tile--2-color);
  border: var(--border-thickness) solid;
  border-top-color: var(--tile--2-highlight);
  border-right-color: var(--tile--2-shadow);
  border-bottom-color: var(--tile--2-shadow);
  border-left-color: var(--tile--2-highlight);
}

.newGame {
  color: var(--new-game);
  font-size: 2rem;
  background: none;
  border: none;
  text-decoration: underline;
  display: block;
  margin: 0 auto;
  margin-top: 5vmin;
}

@keyframes popIn {
  from {
    opacity: 0;
    pointer-events: none;
    visibility: hidden;
    transform: scale(0.6);
    transition: opacity, scale, 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55);
  }
}

